fix top logo on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1065,6 +1065,7 @@ hr {
     width: 100%;
     padding: 1rem;
     font-size: 1rem;
+    justify-content: center;
   }
 
   nav {
